2001-08-14  Jeff Johnston  <jjohnstn@redhat.com>

        * expr.c (operand)[LITERAL_PREFIXDOLLAR_HEX]: Treat $L as
        a label, not a hex constant.

2001-08-13  Nick Clifton  <nickc@cambridge.redhat.com>

	* config/tc-v850.h: Add missing prototypes.

2001-08-12  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* config/tc-s390.c (s390_elf_cons): Correct fixups for PLT
	relocations.

2001-08-12  TAKAI Kousuke  <takai@vlsi.kuee.kyoto-u.ac.jp>

	* config/tc-sparc.c (cons_fix_new_sparc): Move
	`sparc_no_align_cons = 0;' to...
	(s_uacons): ...here so that sparc_no_align_cons will get
	cleared properly.

2001-08-11  Kazu Hirata  <kazu@hxi.com>

	* config/tc-mips.c: Fix a comment typo.

2001-08-10  Richard Sandiford  <rsandifo@redhat.com>

	* config/tc-mips.c (move_register): New function.
	(macro_build): Remove OPCODE_IS_MEMBER's gp32 argument.
	(mips_ip): Likewise.
	(macro2): Use move_register rather than macro_build for moves.
	(mips16_macro): Likewise.
	(macro): Likewise.  Handle M_MOVE.

2001-08-10  Andreas Jaeger  <aj@suse.de>

	* configure.in: Add -Wstrict-prototypes and -Wmissing-prototypes
	to build warnings.
	* configure: Regenerate.

2001-08-10  Alan Modra  <amodra@bigpond.net.au>

	* as.h (alloca): Don't declare if __GNUC__.  Remove an old comment.
	Comment indentation of #pragma.
	* macro.c (alloca): Likewise.

	* config/tc-ppc.c: Revert 2001-08-08.

2001-08-09  Alan Modra  <amodra@bigpond.net.au>

	* symbols.c: Add missing prototypes.
	* config/e-i386elf.c: Likewise.
	* config/e-i386coff.c: Likewise.
	* config/e-i386aout.c: Likewise.
	* config/obj-coff.c: Likewise.
	(def_symbol_in_progress, stack): Move definition.
	* config/obj-elf.c: Add missing prototypes.
	(obj_elf_change_section): Make static.
	(obj_elf_parse_section_letters): Likewise.
	(obj_elf_section_word): Likewise.
	(obj_elf_section_type): Likewise.

2001-08-08  Alan Modra  <amodra@bigpond.net.au>

	From 1999-10-25  Torbjorn Granlund  <tege@swox.com>